# UVAtlas

./: CMakeLists.txt  README.md
lib/UVAtlasTool/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshOBJ.cpp
lib/extraLib/: CMakeLists.txt  pch.h
lib/geodesicsLib/: CMakeLists.txt
lib/isochartLib/: CMakeLists.txt  SymmetricMatrix.hpp  UVAtlas.cpp  UVAtlasRepacker.cpp  UVAtlasRepacker.h  barycentricparam.cpp  basemeshinfo.cpp  basemeshinfo.h  callbackschemer.h  imtcomputation.cpp  isochart.cpp  isochart.h  isochartengine.cpp  isochartengine.h  isochartmesh.cpp  isochartmesh.h  isochartutil.cpp  isochartutil.h  lscmparam.cpp  mergecharts.cpp  meshapplyisomap.cpp  meshcommon.inl  meshoptimizeboundaries.cpp  meshoptimizestretch.cpp  meshpartitionchart.cpp  packingcharts.cpp  progressivemesh.cpp  progressivemesh.h
lib/uvatlasLib/: CMakeLists.txt  UVAtlas.h  sal.h
res/: bunny.ply  cube.ply  out.mtl  out.ply  test.ply
sample/: CMakeLists.txt  UVAtlas.cpp
